--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "sass-dashi",
   "description": "Sass variable & mixin",
-  "version": "0.1.1",
+  "version": "0.2.0",
+  "main": "src/scss/_dashi.scss",
   "keywords": [
     "sass",
     "scss",
